src/pages/es/v1.17.0/rn-sdk/init.mdx
---
title: "SDK de React Native - Inicialización del SDK"
metaTitle: "SDK de React Native - Inicialización del SDK"
metaDescription: "Opciones de configuración para el método constructor del tracker de React Native para iOS"
---
import Aside from '~/components/Aside.astro'
import ORCard from '~/components/Card/ORCard.astro'

<Aside type="caution">
	El SDK de React Native está en fase Beta y actualmente solo es compatible con aplicaciones de iOS. No dudes en enviarnos tus comentarios o informar de cualquier problema que encuentres en nuestro [Slack](https://slack.openreplay.com) o consultar nuestro [Foro](https://forum.openreplay.com).
</Aside>

## Instalación

La siguiente línea instalará el tracker y con él el SDK para que puedas aprovechar todas las funciones del tracker.

```bash
npm i @openreplay/react-native
```

## Inicialización

Al instanciar el tracker de OpenReplay, hay varias opciones de configuración que puedes proporcionar para personalizar muchos aspectos de la grabación y de la experiencia de grabación. Debes establecer la opción `projectKey` en el constructor. Puedes obtener este valor desde tu panel de OpenReplay en 'Preferences > Projects'.

<Aside type="tip">
	Ten en cuenta que si tienes varios proyectos, debes prestar atención a qué clave de proyecto eliges.
</Aside>


### Añadir el código de seguimiento

Añade el siguiente código a tu archivo raíz:

```js
import Openreplay from '@openreplay/react-native';

// ...
useEffect(() => {
	OpenReplay.tracker.startSession(
		'yourProjectKey',
		options, // explained below, set {} if empty
		'https://local.openreplay.instance/ingest' // not required if you're using managed version
	);
}, [])
```

### Sanear datos

Consulta [cómo sanear datos en las repeticiones de React Native](/rn-sdk/sanitization) para más detalles.

## Opciones de inicialización

De forma predeterminada, todas las opciones están marcadas como `true`:

- `crashes: Bool` Habilita crashlytics.
- `analytics: Bool` Habilita el seguimiento de analítica de las vistas marcadas.
- `performances: Bool` Habilita el detector de rendimiento.
- `logs: Bool` Habilita el detector de registros.
- `screen: Bool` Habilita el grabador de pantalla.

## Métodos

<div class="grid grid-cols-12 md:grid-cols-12 gap-3 md:gap-4">
	<ORCard title="Conoce los métodos y módulos del SDK de React Native" url="/rn-sdk/modules" hideIcon={true} width="100"/>
</div>

## ¿Tienes preguntas?
Si tienes alguna pregunta sobre este proceso, no dudes en contactarnos en nuestro [Slack](https://slack.openreplay.com) o consultar nuestro [Foro](https://forum.openreplay.com).